# fursona-bot

./: .gitignore  Cargo.toml  README.md
src/: commands.rs  fursona.rs  main.rs
